@@ -1,0 +1,7 @@
+class PasswordSetError(Exception):
+    """Raised when the password can't be set.
+    """
+
+class InitError(Exception):
+    """Raised when the keyring could not be initialised
+    """
